# esp8266-websocket-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: linux_build.yml
components/dht11/: CMakeLists.txt  README.md
components/dht11/include/: dht11.c  dht11.h
components/httpd_server/: CMakeLists.txt  Kconfig  README.md
components/httpd_server/include/httpd_server/: esp_http_server.h
components/httpd_server/src/: httpd_main.c
components/pc_io/: CMakeLists.txt
components/pc_io/include/: pc_io.c  pc_io.h  (+2 more)
components/shifted_pwm/: CMakeLists.txt  README.md
components/web_server/: CMakeLists.txt
components/webserver/: CMakeLists.txt  README.md
components/websocket/: CMakeLists.txt
docs/schematic/: LEDController-cache.lib  LEDController.dcm  LEDController.kicad_pcb  LEDController.lib  LEDController.pro  LEDController.sch  fp-lib-table  sym-lib-table
main/: .gitignore  CMakeLists.txt  global_periphs.h  main.c  websocket_handler.c  websocket_handler.h  websocket_listener.c  websocket_listener.h  wifi_sta.c  wifi_sta.h
scripts/: README.md  cmake_configure.sh  create_build_artifact.sh  create_server_files.py  create_server_files.sh  create_server_index.py  create_spiffs_image.sh  flash.sh  flash_program.sh  flash_server_files.sh  generate_webpages.py  init_env.sh  install_xtensa_toolchain.sh  plot_measurements.py  read_measurements.py  serial_monitor.sh  serve_local_website.sh  setup_esp8266_environment.sh
static/: index.html
static/css/: index.css
static/js/: App.js  PacketDecoder.js  common.js
(+18 files in other folders)
